tests/ui/static/static-mut-not-constant.stderr
error[E0015]: cannot call non-const fn `Box::<isize>::new` in statics
  --> $DIR/static-mut-not-constant.rs:1:28
   |
LL | static mut a: Box<isize> = Box::new(3);
   |                            ^^^^^^^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `Lazy::new(|| ...)` from the `once_cell` crate: https://crates.io/crates/once_cell

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
